--- a/Segundo bimestre/app/src/main/AndroidManifest.xml
+++ b/Segundo bimestre/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProyectoSegundoBimestre_LopezQuijano">
         <activity
+            android:name=".ListaDeActividades"
+            android:exported="true"
+            android:label="@string/title_activity_lista_de_actividades"
+            android:theme="@style/Theme.ProyectoSegundoBimestre_LopezQuijano.NoActionBar" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
